--- a/index.html
+++ b/index.html
@@ -258,9 +258,8 @@
 
         <!-- Sezione P.IVA e Copyright -->
         <div class="info-legali">
-            <p>P.IVA 02417570971</p>
-            <p><a href="#">Privacy Policy</a> | <a href="#">Cookie Policy</a></p>
-            <p>© 2024 Valentina Garino - Tutti i diritti riservati</p>
+            <p>P.IVA </p>
+            <p>© 2025 Valentina Garino </p>
         </div>
     </div>
 </footer>
