--- a/servizi.html
+++ b/servizi.html
@@ -206,10 +206,9 @@
         </div>
 
         <!-- Sezione P.IVA e Copyright -->
-        <div class="info-legali">
-            <p>P.IVA 02417570971</p>
-            <p><a href="#">Privacy Policy</a> | <a href="#">Cookie Policy</a></p>
-            <p>© 2024 Valentina Garino - Tutti i diritti riservati</p>
+        <<div class="info-legali">
+            <p>P.IVA </p>
+            <p>© 2025 Valentina Garino </p>
         </div>
     </div>
 </footer>
