--- a/depressione.html
+++ b/depressione.html
@@ -177,7 +177,7 @@
         </div>
 
         <!-- Sezione P.IVA e Copyright -->
-        <<div class="info-legali">
+        <div class="info-legali">
             <p>P.IVA </p>
             <p>© 2025 Valentina Garino </p>
         </div>
